# final_project

./: .coverage  .coveragerc  .gitignore  HOW_TO_CHECK.md  INSTALL.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  check_code.sh  deploy_to_git.bat  push_project.bat  requirements.txt  run_analysis.sh  run_demo.sh  samples  setup.sh
catkin_ws/: .gitignore  frames.gv
catkin_ws/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish
catkin_ws/devel/lib/pkgconfig/: sim_pkg.pc  tracker_pkg.pc
catkin_ws/devel/lib/python3/dist-packages/tracker_pkg/: __init__.py
catkin_ws/devel/lib/tracker_pkg/: tracker_node.py
catkin_ws/devel/share/sim_pkg/cmake/: sim_pkgConfig.cmake
catkin_ws/devel/share/tracker_pkg/cmake/: tracker_pkgConfig.cmake
catkin_ws/samples/: frame_0010.ini  trajectory.json  trajectory_test.json
catkin_ws/src/sim_pkg/: README.md
catkin_ws/src/sim_pkg/launch/: demo.launch  sim.launch
catkin_ws/src/sim_pkg/models/robot_with_markers/: model.sdf
catkin_ws/src/sim_pkg/scripts/: kill_all.sh  move_robot.py  run_full_demo.sh
catkin_ws/src/sim_pkg/worlds/: arena_obstacles.world  corridor.world
catkin_ws/src/sim_pkg/worlds/custom/: README.md
catkin_ws/src/tracker_pkg/: CMakeLists.txt  README.md  setup.py
catkin_ws/src/tracker_pkg/config/: tracker.yaml
catkin_ws/src/tracker_pkg/launch/: tracker.launch
catkin_ws/src/tracker_pkg/rviz/: tracker.rviz
catkin_ws/src/tracker_pkg/scripts/: offline_visualizer.py  process_image_sequence.py  tracker_node.py
catkin_ws/src/tracker_pkg/src/: tracker_pkg
catkin_ws/src/tracker_pkg/src/tracker_pkg/: __init__.py  detectors.py  plot_trajectory_interactive.py
catkin_ws/src/tracker_pkg/src/tracker_pkg/adapters/: detection.py
catkin_ws/src/tracker_pkg/src/tracker_pkg/domain/: trajectory.py
gazebo/sim_pkg/: CMakeLists.txt  README.md  package.xml
gazebo/sim_pkg/launch/: demo.launch  sim.launch
gazebo/sim_pkg/models/robot_with_markers/: model.sdf
gazebo/sim_pkg/scripts/: move_robot.py  run_full_demo.sh
gazebo/sim_pkg/worlds/: arena.world
project_misc/: ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  push_to_git.bat  подаем на вход последовательность к.txt
project_misc/gazebo/sim_pkg/: package.xml
project_misc/gazebo/sim_pkg/launch/: demo.launch
project_misc/gazebo/sim_pkg/scripts/: cmd_vel_circle.py
project_misc/gazebo/sim_pkg/worlds/: arena.world
project_misc/python/tracker_pkg/rviz/: tracker.rviz
project_misc/python/tracker_pkg/scripts/: camera_debug.py  offline_visualizer.py  process_image_sequence.py
python/: Dockerfile  README.md  pyproject.toml
python/tests/: test_detector.py  test_pose.py  test_processor.py  test_projector.py  test_shims.py  test_trajectory.py
python/tracker_pkg/: .coverage  CMakeLists.txt  Dockerfile  README.md  camera.py  package.xml  plot_trajectory_interactive.py  trajectory.py
python/tracker_pkg/adapters/: __init__.py
python/tracker_pkg/config/: tracker.yaml
python/tracker_pkg/domain/: __init__.py  pose.py
python/tracker_pkg/launch/: tracker.launch
python/tracker_pkg/rviz/: tracker.rviz
python/tracker_pkg/scripts/: __init__.py  offline_processor.py  offline_visualizer.py  tracker_node.py
python/tracker_pkg/tests/: test_detector.py  test_pose.py  test_processor.py  test_projector.py
python/tracker_pkg/tracker_pkg/: detectors.py  plot_trajectory_interactive.py  pose.py  processor.py  trajectory.py
python/tracker_pkg/tracker_pkg/domain/: camera.py
python/tracker_pkg/usecases/: __init__.py  image_sequence.py
tracker_logs/: report.html  trajectory.json
