[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-tracker-pkg"
version = "0.1.0"
description = "Offline tracker for robot pose reconstruction from colored markers in image sequences."
authors = [{name = "Final Project Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.23",
  "opencv-python-headless>=4.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1"
]
viz = [
  "matplotlib>=3.7",
  "plotly>=5.20",
  "mplcursors>=0.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracker_pkg*"]
exclude = ["tests*"]

[tool.coverage.run]
branch = true
source = ["tracker_pkg"]
