<?xml version="1.0"?>
<package format="3">
  <name>sim_pkg</name>
  <version>0.0.1</version>
  <description>Gazebo simulation package for robot tracking with external camera</description>

  <maintainer email="team@example.com">Gazebo Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <!-- TODO: Add any export tags here -->
  </export>
</package>
